--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "netlify-cms-widget-permalink",
-  "version": "1.0.2",
-  "description": "Permalink widget for Netlify CMS",
+  "name": "decap-cms-widget-permalink",
+  "version": "2.0.0",
+  "description": "Permalink widget for Decap CMS",
   "main": "./dist/index.js",
   "files": [
     "dist",
@@ -10,10 +10,10 @@
   "keywords": [],
   "author": "Wojciech Kaluzny <wk@cleancommit.io>",
   "license": "MIT",
-  "repository": "https://github.com/clean-commit/netlify-cms-widget-permalink",
+  "repository": "https://github.com/clean-commit/decap-cms-widget-permalink",
   "peerDependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1"
@@ -29,6 +29,6 @@
     "@babel/core": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
-    "@types/react": "^16.8.23"
+    "@types/react": "^18.2.0"
   }
 }
